--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
+        "ffmpeg": "0.0.4",
     "discord.js": "11.4.2"
   }
 }
